# webgpu_demo

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  index.html
.cargo/: config.toml
src/: error.rs  initializer.rs  lib.rs  main.rs  styles.rs  surface_presets.rs  surface_state.rs  type_is.rs
src/events/: mod.rs  redraw_requested.rs
