[package]
name = "webgpu_demo"
version = "0.1.0"
edition = "2021"
description = ""
license = ""
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "webgpu"
path = "src/main.rs"

[dependencies]
pollster = "0.3"

winit = "0.28"
# wgpu = "0.18"
console_error_panic_hook = "0.1"

env_logger = "0.11"
log = "0.4"

cfg-if = "1"
# the other regular dependencies...
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1"
console_log = { version = "1.0", features = ["color"] }
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-test = "0.3.42"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "console", "HtmlCanvasElement"] }
